--- a/canvasWay/index.html
+++ b/canvasWay/index.html
@@ -2,14 +2,14 @@
      <html lang="en" >
          <head>
                  <meta charset="utf-8" />
-                 <title>打地鼠</title>
+                 <title>皇叔好帅</title>
              </head>
-         <body onload="init()">
+         <body>
              <div class="container">
-                     <canvas onmouseover="hideCursor(this)" onmouseout="showCursor"
-                                                        onmousemove="hammerMove(this);"
-                                                        onmousedown="hammerDown();" onmouseUp="hammerUp();"
-                                                        id="screen" width="700" height="500" style="border:1px solid #000"></canvas>
+                     <canvas
+                             onmousemove="hammerMove(this);"
+                             onmousedown="hammerDown();" onmouseUp="hammerUp();"
+                             id="screen" ></canvas>
                  </div>
 
              <div id="info"></div>
@@ -17,9 +17,14 @@
      </html>
 
 
-
+<script src="jquery-3.0.0.js"></script>
 <script>
-
+    //十秒数
+  var countPer10s = 10;
+    //下降速
+  var downSpeed = 20;
+    //帧
+  var fps = 30;
 
   var canvas, ctx, info;
   var bg;
@@ -27,62 +32,74 @@
   var mouseState, mouseFrmLen = 10, mousePress = false;
   var sprites = [], holes = [];
   var score = 0;
-  var Sprite = function(w, h, x, y, state, image){
-      var self = this;
+
+  $(function(){
+      init();
+  });
+  function init(){
+      //设置初始状态
+      var screen = $('#screen');
+      screen.attr("width",$(window).get(0).innerWidth);
+      screen.attr("height",$(window).get(0).innerHeight);
+
+      //这个设计的不合理
+      info = document.getElementById('info');
+      
+      canvas = document.getElementById('screen');
+      ctx = canvas.getContext('2d');
+
+      bg = new Image();
+      bg.src = 'bg.jpg';
+
+      var msImg = new Image();
+      msImg.src = 'sprite.png';
+
+      //绑在这里防止报错
+      msImg.onload = function(){
+          setInterval(function(){
+              sprites.push(new createSprite(60, 70, msImg));
+          }, 10000/countPer10s);
+      }
+
+      setInterval(drawScreen, 1000/fps);
+      setInterval(updateLogic, 3000);
+
+  };
+
+  function createSprite (w,h,image){
       this.w = w;
       this.h = h;
-      this.x = x;
-      this.y = y;
+      this.x = Math.random() * $(window).get(0).innerWidth;
+      this.y = 80;
       this.image = image;
-      this.state = state;
+      this.state = 'show';
 
       this.draw = function(){
           if(this.state == 'show'){
-              ctx.drawImage(this.image, this.x, this.y, this.w, this.h);
-              setTimeout(function(){
-                  self.state = 'hide';
-              },3000);
-          }
-      }
-  }
-
-  var HoleSprite = function(w, h, x, y, state, image){
-      var self = this;
-      this.w = w;
-      this.h = h;
-      this.x = x;
-      this.y = y;
-      this.image = image;
-      this.state = state;
-
-      this.draw = function(){
-          if(this.state == 'show'){
+              this.y = this.y + 1/fps*(downSpeed);
               ctx.drawImage(this.image, this.x, this.y, this.w, this.h);
           }
       }
   }
 
-  function HammerSprite(w, h, x, y, image){
-      HammerSprite.prototype.w = w;
-      HammerSprite.prototype.h = h;
-      HammerSprite.prototype.x = x;
-      HammerSprite.prototype.y = y;
-
-      HammerSprite.prototype.draw = function(isPress){
-          if(isPress){
-              ctx.save();
-
-              ctx.translate(this.x-10, this.y+34);
-              ctx.rotate(Math.PI/180*330);
-              ctx.drawImage(image, 0, 0, w, h);
-
-              ctx.restore();
-          }else{
-              ctx.drawImage(image, this.x, this.y, w, h);
-          }
-
-      }
-  }
+//  var Sprite = function(w, h, x, y, state, image){
+//      var self = this;
+//      this.w = w;
+//      this.h = h;
+//      this.x = x;
+//      this.y = y;
+//      this.image = image;
+//      this.state = state;
+//
+//      this.draw = function(){
+//          if(this.state == 'show'){
+//              ctx.drawImage(this.image, this.x, this.y, this.w, this.h);
+//              setTimeout(function(){
+//                  self.state = 'hide';
+//              },3000);
+//          }
+//      }
+//  }
 
   function clearScreen(){
       //ctx.clearRect(0, 0, ctx.canvas.width, ctx.canvas.height);
@@ -96,41 +113,26 @@
 
       ctx.font = "40px serif"
       ctx.strokeStyle = "#FF00ff";
-      ctx.strokeText ("LION打地鼠", 50,50);
+      ctx.strokeText ("皇叔好帅", 50,50);
       ctx.fillStyle = "#000000";
-      ctx.fillText("LION打地鼠",50,50);
+      ctx.fillText("皇叔好帅",50,50);
 
       ctx.fillStyle = "#ff0000";
       ctx.fillText("你的得分:"+score,450,50);
-      for(i=0;i<3;i++){
-          for(j=0; j<3; j++){
-              holes[i][j].draw();
-          }
-      }
 
-
-      for(i=0;i<3;i++){
-          for(j=0; j<3; j++){
-              sprites[i][j].draw();
-          }
-      }
-
-      if(hammer){
-          hammer.draw(mousePress);
+      for(i=0;i<sprites.length;i++){
+              sprites[i].draw();
       }
   }
 
   function updateLogic(){
 
-      for(i=0;i<3;i++){
-          for(j=0; j<3; j++){
-              sprites[i][j].state=='hide'
-          }
+      for(i=0;i<sprites.length;i++){
+              sprites[i].state=='hide'
       }
 
       var a = Math.round(Math.random()*100)%3;
-      var b = Math.round(Math.random()*100)%3;
-      sprites[a][b].state='show';
+//      sprites[a].state='show';
   }
 
 
@@ -143,9 +145,8 @@
 
   function hit(x, y){
 
-      for(i=0;i<3;i++){
-          for(j=0;j<3;j++){
-              var s = sprites[i][j];
+      for(i=0;i<sprites.length;i++){
+              var s = sprites[i];
 
               if(s.state=='show'){
                   if(x>s.x+30 && y>s.y && x<(s.x+s.w+30) && y<(s.y+s.h)){
@@ -153,57 +154,9 @@
                       s.state = 'hide';
                   }
               }
-          }
+
       }
   }
-
-  function init(){
-      info = document.getElementById('info');
-      canvas = document.getElementById('screen');
-      ctx = canvas.getContext('2d');
-
-      bg = new Image();
-      bg.src = 'bg.jpg';
-      bg.onload = function(){};
-
-
-      var hamImg = new Image();
-      hamImg.src = 'hammer.png';
-      hamImg.onload = function(){
-          hammer = new HammerSprite(48, 48, 100, 100, hamImg);
-      }
-
-      var msImg = new Image();
-      msImg.src = 'mouse.png';
-
-      msImg.onload = function(){
-          for(i=0;i<3;i++){
-              var arr = [];
-              for(j=0; j<3; j++){
-                  var s = new Sprite(60, 70, 50+240*i, 80+120*j, 'hide', msImg);
-                  arr[j] = s;
-              }
-              sprites[i] = arr;
-          }
-      }
-
-      var holeImg = new Image();
-      holeImg.src = 'hole.png';
-      holeImg.onload = function(){
-          for(i=0;i<3;i++){
-              var arr = [];
-              for(j=0; j<3; j++){
-                  var s = new HoleSprite(80, 30, 40+240*i, 140+120*j, 'show', holeImg);
-                  arr[j] = s;
-              }
-              holes[i] = arr;
-          }
-      }
-
-      setInterval(drawScreen, 30);
-      setInterval(updateLogic, 3000);
-
-  };
 
   function hammerDown(){
       mousePress = true;
@@ -216,11 +169,4 @@
       hit(event.x, event.y);
   }
 
-  function hideCursor(obj){
-      obj.style.cursor='none';
-  }
-
-  function showCursor(obj){
-      obj.style.cursor='';
-  }
    </script>
