--- a/canvasWay/index.html
+++ b/canvasWay/index.html
@@ -5,7 +5,7 @@
                  <meta charset="utf-8" />
                  <title>皇叔好帅</title>
              </head>
-         <body>
+         <body style="margin: 0px;">
              <div class="container">
                      <canvas
                              onmousemove="hammerMove(this);"
@@ -13,7 +13,7 @@
                              id="screen" ></canvas>
                  </div>
 
-             <div id="info"></div>
+             <div style="display: none" id="info"></div>
          </body>
      </html>
 
