--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
   </head>
   <body>
     <a href="https://emperorfront.github.io/collectThumbs/canvasWay">集赞游戏 Canvas版本</a>
+    <p></p>
+    <a href="https://emperorfront.github.io/collectThumbs/css3Way">集赞游戏 Css3版本</a>
   </body>
 </html>
