--- a/css3Way/index.html
+++ b/css3Way/index.html
@@ -10,6 +10,7 @@
         }
 
         div {
+            position: relative;
             width: 1rem;
             height: 1rem;
             background: #f3f3f8;
@@ -62,6 +63,7 @@
 <div></div>
 <div></div>
 <div></div>
+<script src="../jquery-3.0.0.js"></script>
 <script>
     var a = document.querySelectorAll('div');
     //给元素集合转成数组添加forEach方法
@@ -71,16 +73,17 @@
             x: 0,
             y: Math.random() * 120
         };
-        el.animate([
-            { transform: 'translate(0,0)' },
-            { transform: 'translate(' + to.x + 'rem,' + to.y + 'rem)' }
-        ], {
-            duration: (Math.random() + 1) * 2000,
-            direction: 'alternate',
-            fill: 'both',
-            iterations: Infinity,
-            easing: 'ease-in-out'
-        });
+//        $(el).animate([
+//            { transform: 'translate(0,0)' },
+//            { transform: 'translate(' + to.x + 'rem,' + to.y + 'rem)' }
+//        ], {
+//            duration: (Math.random() + 1) * 2000,
+//            direction: 'alternate',
+//            fill: 'both',
+//            iterations: Infinity,
+//            easing: 'ease-in-out'
+//        });
+        $(el).animate({top:'300px'});
     });
 </script>
 </body>
