--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <body>
     <a href="https://emperorfront.github.io/collectThumbs/canvasWay">集赞游戏 Canvas版本</a>
     <p></p>
-    <a href="https://emperorfront.github.io/collectThumbs/css3Way">集赞游戏 Css3版本</a>
+    <a href="https://emperorfront.github.io/collectThumbs/css3Way">集赞游戏 Css3版本</a>    
+    <p></p>
+    <a href="https://emperorfront.github.io/collectThumbs/protogenesisChromeWay">集赞游戏 protogenesisChrome版本</a>
   </body>
 </html>
