--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <p></p>
     <a href="https://emperorfront.github.io/collectThumbs/css3Way">集赞游戏 Css3版本</a>    
     <p></p>
-    <a href="https://emperorfront.github.io/collectThumbs/protogenesisChromeWay">集赞游戏 protogenesisChrome版本</a>
+    <a href="https://emperorfront.github.io/collectThumbs/protogenesisChromeWay">集赞游戏 protogenesisChrome版本</a>    
+    <p></p>
+    <a href="https://emperorfront.github.io/collectThumbs/jsSupportForAnimateWay">集赞游戏 jsSupportForAnimateWay版本</a>
   </body>
 </html>
