--- a/jsSupportForAnimateWay/index.html
+++ b/jsSupportForAnimateWay/index.html
@@ -10,57 +10,38 @@
         }
 
         div {
-            position: relative;
-            width: 1rem;
-            height: 1rem;
+            position: absolute;
+            width: 60px;
+            height: 60px;
             background: #f3f3f8;
             border-radius: 1rem;
             display: inline-block;
-            margin: 1rem;
-        }
-
-        input {
-            position: absolute;
-            bottom: 1rem;
-            left: 50%;
-            -webkit-transform: translateX(-50%);
-            transform: translateX(-50%);
-            -webkit-appearance: none;
-            -moz-appearance: none;
-            appearance: none;
-            border: 2px solid #f3f3f8;
-            border-radius: .4rem;
-            color: #f3f3f8;
-            background: #324242;
-            line-height: 3;
-            padding: 0 1rem;
-            font-size: 1rem;
         }
     </style>
     <meta charset="UTF-8">
     <title></title>
 </head>
 <body>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
 <script src="../jquery-3.0.0.js"></script>
 <script>
+    //构造池子
+    var html = '';
+    var initWidth =  window.screen.width - 60;
+    for(var i =0; i < 6 ;i++){
+        html += "<div style='left:" + Math.ceil(initWidth * Math.random()) + "px'></div>"
+    }
+    $('body').prepend(html);
     var a = document.querySelectorAll('div');
     //给元素集合转成数组添加forEach方法
     a = Array.prototype.slice.call(a);
     a.forEach(function (el, i, ra) {
-        var to = {
-            x: 0,
-            y: Math.random() * 120
-        };
         var height = 800 + 300 * Math.random();
-        $(el).animate({top:height+'px'},1000 + 3000 * Math.random() ,'linear',function(){});
+        $(el).animate({top:height+'px'} ,5000 + 3000 * Math.random() ,'linear',function(){
+            $(this).hide();
+        });
     });
+
+    //当选点消失，自己悄悄的异步修改其起始位置即可
 </script>
 </body>
 </html>
