--- a/jsSupportForAnimateWay/index.html
+++ b/jsSupportForAnimateWay/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0;" name="viewport" />
     <style>
         body {
             background: #324242;
