--- a/touchLearnDemo/index.html
+++ b/touchLearnDemo/index.html
@@ -5,7 +5,7 @@
     <title></title>
 </head>
 <body>
-<div id="id"></div>
+<div id="id" style="width:50px; height:50px; background-color:red;"></div>
 <script>
     var obj = document.getElementById('id');
     obj.addEventListener('touchmove', function(event) {
