--- a/touchLearnDemo/index.html
+++ b/touchLearnDemo/index.html
@@ -2,11 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" 
+  content="width=device-width, initial-scale=1.0, user-scalable=no">
+  
     <title></title>
 </head>
 <body>
 <div id="id" style="width:50px; height:50px; background-color:red;"></div>
 <script>
+document.body.addEventListener('touchmove', function(event) {
+  event.preventDefault();
+}, false); 
     var obj = document.getElementById('id');
     obj.addEventListener('touchmove', function(event) {
         // If there's exactly one finger inside this element
