--- a/touchLearnDemo/index.html
+++ b/touchLearnDemo/index.html
@@ -8,7 +8,7 @@
     <title></title>
 </head>
 <body>
-<div id="id" style="width:50px; height:50px; background-color:red;"></div>
+<div id="id" style="position:relative; width:50px; height:50px; background-color:red;"></div>
 <script>
 document.body.addEventListener('touchmove', function(event) {
   event.preventDefault();
