--- a/jsSupportForAnimateWay/index.html
+++ b/jsSupportForAnimateWay/index.html
@@ -11,6 +11,7 @@
             background-size: cover;
         }
         div {
+            transform:translateZ(0);
             position: absolute;
             width: 130px;
             height: 130px;
