--- a/v2/index.html
+++ b/v2/index.html
@@ -87,7 +87,7 @@
 </head>
 <body>
 <span class="score">0</span>
-<script src="../../jquery-3.0.0.js"></script>
+<script src="../jquery-3.0.0.js"></script>
 <script>
     var collectThumbs = {
         score: 0,
