--- a/v2/index.html
+++ b/v2/index.html
@@ -134,8 +134,8 @@
             to {top:-9px;font-size: 50px}
         }
         @-webkit-keyframes timeCount {
-            from {top:0px;}
-            to {top:20px;}
+            from {top:5px;font-size: 20px}
+            to {top:-9px;font-size: 50px}
         }
     </style>
     <meta charset="UTF-8">
