--- a/v2/index.html
+++ b/v2/index.html
@@ -9,6 +9,9 @@
             overflow-x: hidden;
             background-image: url("bg-sky.png");
             background-size: cover;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
             user-select: none;
         }
         div {
