--- a/v2/index.html
+++ b/v2/index.html
@@ -134,12 +134,10 @@
             -webkit-animation: timeCount 0.5s infinite alternate; /*Safari and Chrome*/
         }
         @keyframes timeCount {
-            from {top:5px;font-size: 20px}
-            to {top:-9px;font-size: 50px}
+            to {transform:scale(3,3)}
         }
         @-webkit-keyframes timeCount {
-            from {top:5px;font-size: 20px}
-            to {top:-9px;font-size: 50px}
+            to {transform:scale(3,3)}
         }
         .explosion {
             -webkit-animation: explosion 0.5s steps(6);
