--- a/v2/index.html
+++ b/v2/index.html
@@ -270,7 +270,7 @@
             $('.time').addClass('countdown');
         }
         if(collectThumbs.time <= 0 ){
-//            window.location.href = "http://localhost:63342/pumpMouse/demo/divRbackArea.html"
+            window.location.href = "https://emperorfront.github.io/collectThumbs/v2/"
         }
         $('.time').html(collectThumbs.time);
     }
