--- a/v3/index.html
+++ b/v3/index.html
@@ -318,7 +318,7 @@
             $('.time').addClass('countdown');
         }
         if(collectThumbs.time <= 0 ){
-//            window.location.href = "http://localhost:63342/pumpMouse/demo/divRbackArea.html"
+            window.location.href = "https://emperorfront.github.io/collectThumbs/v3/"
         }
         $('.time').html(collectThumbs.time);
     }
