--- a/v3/index.html
+++ b/v3/index.html
@@ -321,7 +321,7 @@ document.body.addEventListener('touchmove', function (event) {
             $('.time').addClass('countdown');
         }
         if(collectThumbs.time <= 0 ){
-            window.location.href = "https://emperorfront.github.io/collectThumbs/v3/"
+    //        window.location.href = "https://emperorfront.github.io/collectThumbs/v3/"
         }
         $('.time').html(collectThumbs.time);
     }
