--- a/v3/index.html
+++ b/v3/index.html
@@ -209,7 +209,7 @@
     <meta charset="UTF-8">
     <title></title>
 </head>
-<body ontouchmove="event.preventDefault()">
+<body>
 <div class="score-logo"><span class="score">0</span></div>
 <div class="time-logo"><span class="time">0</span></div>
 <div class="ding-logo"></div>
