--- a/v3/index.html
+++ b/v3/index.html
@@ -4,6 +4,8 @@
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0;" name="viewport" />
     <style>
         body {
+        	width:100%;
+        	height:100%;
             color: #f3f3f8;
             text-align: center;
             overflow-x: hidden;
