--- a/v3/index.html
+++ b/v3/index.html
@@ -6,6 +6,7 @@
         body {
         	width:100%;
         	height:100%;
+        	    overflow: hidden;
             color: #f3f3f8;
             text-align: center;
             overflow-x: hidden;
